--- a/style.css
+++ b/style.css
@@ -22,6 +22,21 @@ button{
     outline: 0px solid white;
     box-shadow: 0px 1px 5px 1px rgb(223, 223, 223);
 }
+.meo {
+    font-size: 20px;
+    box-shadow: none;
+    padding-left: 60px;
+    margin-bottom: 25px;
+    border-radius: 25px;
+    border: 1px solid red;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-color: burlywood;
+}
+body{
+    background-color: black;
+}
 
 
 
